# stock_market

./: .gitignore  Dockerfile  WATCHLIST_MANAGEMENT.md  config.yaml  docker-compose.yml  manage_watchlist.py  pyproject.toml
sql/: init.sql
stock/: __init__.py  alerts.py  analytics.py  data_fetcher.py  database.py  main.py
